tests/lean/noTabs.lean.expected.out
noTabs.lean:4:0: error: tabs are not allowed; please configure your editor to expand them
